GATHER_PROJECT_FILES(librengine LIBRARY_SOURCES)

IF(NOT UNIX)
	LIST(REMOVE_ITEM LIBRARY_SOURCES "${CMAKE_SOURCE_DIR}/librengine/src/rengine/windowing/WindowingX11.cpp")
	LIST(REMOVE_ITEM LIBRARY_SOURCES "${CMAKE_SOURCE_DIR}/librengine/src/rengine/thread/ThreadPThread.cpp")
	LIST(REMOVE_ITEM LIBRARY_SOURCES "${CMAKE_SOURCE_DIR}/librengine/src/rengine/thread/SynchronizationPThread.cpp")
ENDIF(NOT UNIX)

IF(NOT WIN32)
	LIST(REMOVE_ITEM LIBRARY_SOURCES "${CMAKE_SOURCE_DIR}/librengine/src/rengine/windowing/WindowingWin32.cpp")
	LIST(REMOVE_ITEM LIBRARY_SOURCES "${CMAKE_SOURCE_DIR}/librengine/src/rengine/thread/ThreadWin32.cpp")
	LIST(REMOVE_ITEM LIBRARY_SOURCES "${CMAKE_SOURCE_DIR}/librengine/src/rengine/thread/SynchronizationWin32.cpp")
ENDIF(NOT WIN32)

IF(NOT RENGINE_WITH_ALSA)
	LIST(REMOVE_ITEM LIBRARY_SOURCES "${CMAKE_SOURCE_DIR}/librengine/src/Alc/alsa.c")
ENDIF(NOT RENGINE_WITH_ALSA)

IF(NOT RENGINE_WITH_OSS)
	LIST(REMOVE_ITEM LIBRARY_SOURCES "${CMAKE_SOURCE_DIR}/librengine/src/Alc/oss.c")
ENDIF(NOT RENGINE_WITH_OSS)

IF(NOT RENGINE_WITH_PULSEAUDIO)
	LIST(REMOVE_ITEM LIBRARY_SOURCES "${CMAKE_SOURCE_DIR}/librengine/src/Alc/pulseaudio.c")
ENDIF(NOT RENGINE_WITH_PULSEAUDIO)	

IF(NOT RENGINE_WITH_DSOUND)
	LIST(REMOVE_ITEM LIBRARY_SOURCES "${CMAKE_SOURCE_DIR}/librengine/src/Alc/dsound.c")
ENDIF(NOT RENGINE_WITH_DSOUND)	
	
IF(NOT RENGINE_WITH_V4L)
	LIST(REMOVE_ITEM LIBRARY_SOURCES "${CMAKE_SOURCE_DIR}/librengine/src/rengine/capture/VideoCaptureV4L.cpp")
ENDIF(NOT RENGINE_WITH_V4L)

IF(NOT RENGINE_WITH_DSHOW)
	LIST(REMOVE_ITEM LIBRARY_SOURCES "${CMAKE_SOURCE_DIR}/librengine/src/rengine/capture/VideoCaptureDShow.cpp")
ENDIF(NOT RENGINE_WITH_DSHOW)


ADD_LIBRARY(${RENGINE_NAME} ${LIBRARY_SOURCES})
#MESSAGE(STATUS "LIBRARY_SOURCES: ${LIBRARY_SOURCES}")
	

